# fastapi-example

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/fastapi_example/: __init__.py  cmdline.py  db.sqlite  exceptions.py  log.py  models.py  repositories.py  schemas.py  server.py  services.py  tasks.py
src/fastapi_example/config/: __init__.py  settings.yml
src/fastapi_example/restapi/: __init__.py  midelewares.py  routers.py
src/fastapi_sqlalcmemy/: exceptions.py  extension.py
tests/: conftest.py  db.sqlite  test_cmdline.py  test_extension.py  test_log.py  test_repositories.py  test_version.py
